feat: fixed bags of slider

--- a/index.html
+++ b/index.html
@@ -167,33 +167,32 @@
 
         <!-- custom slider -->
         <div id="form-1">
-          <div class="bar form__bar">
-            <div class="label"></div>
-            <div id="m-slider"></div>
+          <div class="form__bar">
+            <div class="slider-value"></div>
+            <div class="sliders"></div>
           </div>
-
-          <div class="bar form__bar">
-            <div class="label"></div>
-            <div id="r-slider"></div>
+          <!-- /.form__bar -->
+          <div class="form__bar  form__bar-next">
+            <div class=" slider-value"></div>
+            <div class="sliders-1"></div>
           </div>
-          <div class="bar flex">
-            <div id="reset" class="button"></div>
+          <!-- /.form__bar -->
+          <div class="form__bar">
+            <div class=" slider-value"></div>
+            <div class="sliders"></div>
           </div>
-
-
-
+          <!-- /.form__bar -->
+          <div class="form__bar">
+            <div class="slider-value"></div>
+            <div class="sliders-1"></div>
+          </div>
+          <!-- /.form__bar -->
+          <div class="form__bar">
+            <div class="slider-value"></div>
+            <div class="sliders-1"></div>
+          </div>
+          <!-- /.form__bar -->
         </div>
-
-        <div class="slider-container">
-          <input type="text" id="slider" class="slider" />
-        </div>
-        <div class="slider-container">
-          <input type="text" id="slider2" class="slider" />
-        </div>
-        <div class="slider-container">
-          <input type="text" id="slider3" class="slider" />
-        </div>
-
         <!-- custom slider -->
 
       </div>
