feat: add modal window

--- a/index.html
+++ b/index.html
@@ -622,7 +622,8 @@
             </li>
 
             <li class="page-item">
-              <button type="button" class="page-link page-link__square page-link__next page-link-active" data-page-link="page_2">
+              <button type="button" class="page-link page-link__square page-link__next page-link-active"
+                data-page-link="page_2">
 
                 <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
@@ -728,9 +729,11 @@
               <div class="select__header page-link__select">
                 <span class="select__change select__start">1</span>
                 <svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M6.001 5.2929L10.4403 0.8536C10.7553 0.5386 10.5322 0 10.0868 0H0.501008C0.0555479 0 -0.167532 0.5386 0.147448 0.8536L4.5868 5.2929C4.9773 5.6834 5.6105 5.6834 6.001 5.2929Z" fill="black"/>
-                  </svg>
-               
+                  <path
+                    d="M6.001 5.2929L10.4403 0.8536C10.7553 0.5386 10.5322 0 10.0868 0H0.501008C0.0555479 0 -0.167532 0.5386 0.147448 0.8536L4.5868 5.2929C4.9773 5.6834 5.6105 5.6834 6.001 5.2929Z"
+                    fill="black" />
+                </svg>
+
               </div>
               <div class="select__body ">
                 <div class="select__item">1</div>
@@ -765,15 +768,117 @@
               data-tabs-handler="current_11">Step 1</button>
           </li>
           <li>
-            <button type="button" class="button button__current button__step" data-tabs-handler="current_12">Step 2</button>
+            <button type="button" class="button button__current button__step" data-tabs-handler="current_12">Step
+              2</button>
           </li>
           <li>
-            <button type="button" class="button button__current button__step" data-tabs-handler="current_13">Step 3</button>
+            <button type="button" class="button button__current button__step" data-tabs-handler="current_13">Step
+              3</button>
           </li>
         </ul>
 
       </div>
       <!-- /.form__col-bg -->
+    </form>
+    <!-- /.form__group -->
+
+    <form action="#" class="form__group" id="section-4">
+      <div class="alert__wrapper">
+        <div class="alert__group">
+          <div class="alert__item alert--blue">
+            <p class="alert-title">This is an alert</p>
+            <div class="alert__close">
+              <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0.29289 0.29289C0.68342 -0.09763 1.31658 -0.09763 1.70711 0.29289L5 3.5858L8.2929 0.29289C8.6834 -0.09763 9.3166 -0.09763 9.7071 0.29289C10.0976 0.68342 10.0976 1.31658 9.7071 1.70711L6.4142 5L9.7071 8.2929C10.0976 8.6834 10.0976 9.3166 9.7071 9.7071C9.3166 10.0976 8.6834 10.0976 8.2929 9.7071L5 6.4142L1.70711 9.7071C1.31658 10.0976 0.68342 10.0976 0.29289 9.7071C-0.09763 9.3166 -0.09763 8.6834 0.29289 8.2929L3.5858 5L0.29289 1.70711C-0.09763 1.31658 -0.09763 0.68342 0.29289 0.29289Z" />
+              </svg>
+            </div>
+          </div>
+          <div class="alert__item alert--blue">
+            <p class="alert-title">This is an alert</p>
+            <p>Alert details go here.</p>
+            <div class="alert__close">
+              <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0.29289 0.29289C0.68342 -0.09763 1.31658 -0.09763 1.70711 0.29289L5 3.5858L8.2929 0.29289C8.6834 -0.09763 9.3166 -0.09763 9.7071 0.29289C10.0976 0.68342 10.0976 1.31658 9.7071 1.70711L6.4142 5L9.7071 8.2929C10.0976 8.6834 10.0976 9.3166 9.7071 9.7071C9.3166 10.0976 8.6834 10.0976 8.2929 9.7071L5 6.4142L1.70711 9.7071C1.31658 10.0976 0.68342 10.0976 0.29289 9.7071C-0.09763 9.3166 -0.09763 8.6834 0.29289 8.2929L3.5858 5L0.29289 1.70711C-0.09763 1.31658 -0.09763 0.68342 0.29289 0.29289Z" />
+              </svg>
+            </div>
+          </div>
+          <div class="alert__item alert--red alert__wrap">
+            <div class="alert__alarm">!</div>
+            <div class="alert__text">
+              <p class="alert-title">This is an alert</p>
+              <p>Alert details go here.</p>
+            </div>
+            <div class="alert__link">
+              <a href="#" class="alert__open">Open</a>
+              <a href="#">Dismiss</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="alert__group">
+          <div class="alert__item alert--light">
+            <p class="alert-title">This is an alert</p>
+            <div class="alert__close">
+              <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0.29289 0.29289C0.68342 -0.09763 1.31658 -0.09763 1.70711 0.29289L5 3.5858L8.2929 0.29289C8.6834 -0.09763 9.3166 -0.09763 9.7071 0.29289C10.0976 0.68342 10.0976 1.31658 9.7071 1.70711L6.4142 5L9.7071 8.2929C10.0976 8.6834 10.0976 9.3166 9.7071 9.7071C9.3166 10.0976 8.6834 10.0976 8.2929 9.7071L5 6.4142L1.70711 9.7071C1.31658 10.0976 0.68342 10.0976 0.29289 9.7071C-0.09763 9.3166 -0.09763 8.6834 0.29289 8.2929L3.5858 5L0.29289 1.70711C-0.09763 1.31658 -0.09763 0.68342 0.29289 0.29289Z" />
+              </svg>
+            </div>
+          </div>
+          <div class="alert__item alert--light">
+            <p class="alert-title">This is an alert</p>
+            <p class="alert-disabled">Alert details go here.</p>
+            <div class="alert__close">
+              <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0.29289 0.29289C0.68342 -0.09763 1.31658 -0.09763 1.70711 0.29289L5 3.5858L8.2929 0.29289C8.6834 -0.09763 9.3166 -0.09763 9.7071 0.29289C10.0976 0.68342 10.0976 1.31658 9.7071 1.70711L6.4142 5L9.7071 8.2929C10.0976 8.6834 10.0976 9.3166 9.7071 9.7071C9.3166 10.0976 8.6834 10.0976 8.2929 9.7071L5 6.4142L1.70711 9.7071C1.31658 10.0976 0.68342 10.0976 0.29289 9.7071C-0.09763 9.3166 -0.09763 8.6834 0.29289 8.2929L3.5858 5L0.29289 1.70711C-0.09763 1.31658 -0.09763 0.68342 0.29289 0.29289Z" />
+              </svg>
+            </div>
+          </div>
+          <div class="alert__item alert--light alert__wrap">
+            <div class="alert__alarm">!</div>
+            <div class="alert__text">
+              <p class="alert-title">This is an alert</p>
+              <p>Alert details go here.</p>
+            </div>
+            <div class="alert__link">
+              <a href="#" class="alert__open">Open</a>
+              <a href="#">Dismiss</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.alert__wrapper -->
+
+
+      <div class="modal">
+        <div class="overlay">
+          <div class="modal__wrapper modal__window">
+            <p class="alert-title">Modal Title</p>
+            <p class="modal__text">Alert details go here.</p>
+            <div class="alert__close modal__close">
+              <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0.29289 0.29289C0.68342 -0.09763 1.31658 -0.09763 1.70711 0.29289L5 3.5858L8.2929 0.29289C8.6834 -0.09763 9.3166 -0.09763 9.7071 0.29289C10.0976 0.68342 10.0976 1.31658 9.7071 1.70711L6.4142 5L9.7071 8.2929C10.0976 8.6834 10.0976 9.3166 9.7071 9.7071C9.3166 10.0976 8.6834 10.0976 8.2929 9.7071L5 6.4142L1.70711 9.7071C1.31658 10.0976 0.68342 10.0976 0.29289 9.7071C-0.09763 9.3166 -0.09763 8.6834 0.29289 8.2929L3.5858 5L0.29289 1.70711C-0.09763 1.31658 -0.09763 0.68342 0.29289 0.29289Z" />
+              </svg>
+            </div>
+            <div class="modal__buttons">
+              <input class="button button--wight modal__close" type="button" value="Cancel">
+              <input class="button button--blue modal__close" type="submit" value="Submit">
+            </div>
+          </div>
+          <!-- /.modal__wrapper -->
+        </div>
+        <!-- /.overlay -->
+      </div>
+      <!-- /.modal -->
+    </form>
+    <!-- /.form__group -->
+
+    <form action="#" class="form__group">
+      
     </form>
     <!-- /.form__group -->
 
