feat: add calendar

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- <link rel='stylesheet' href='https://unpkg.com/v-calendar/lib/v-calendar.min.css'>  -->
   <link rel="stylesheet" href="style/nouislider.min.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="style/style.css">
-  <script src='https://unpkg.com/vue/dist/vue.js' defer></script>
-  <script src='https://unpkg.com/v-calendar' defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr" defer></script>
   <script src="js/nouislider.min.js" defer></script>
 
   <script src="js/main.js" defer></script>
@@ -85,9 +85,7 @@
         </div>
 
         <!-- Calendar -->
-
-        <v-calendar />
-        <v-date-picker v-model="date" />
+        <input class="flatpickr" type="text">
 
       </div>
       <!-- /.form__col -->
@@ -511,6 +509,15 @@
           <button class="multisteps-form__progress-btn" type="button" title="Step 3"></button>
         </div>
         <!-- multisteps-form__progress -->
+        <div class="form__col-bg form__vertical">
+          <div class="multisteps-form__progress multisteps-form__progress-bg">
+            <button class="multisteps-form__progress-btn js-active" type="button" title="Step 1"></button>
+            <button class="multisteps-form__progress-btn js-next" type="button" title="Step 2"></button>
+            <button class="multisteps-form__progress-btn" type="button" title="Step 3"></button>
+            <button class="multisteps-form__progress-btn" type="button" title="Step 3"></button>
+          </div>
+        </div>
+        <!-- /.form form-vertical -->
 
       </div>
       <!-- /.form__col-bg -->
@@ -768,15 +775,7 @@
               3</button>
           </li>
         </ul>
-        <div class="form__col-bg form__vertical">
-          <div class="multisteps-form__progress multisteps-form__progress-bg">
-            <button class="multisteps-form__progress-btn js-active" type="button" title="Step 1"></button>
-            <button class="multisteps-form__progress-btn js-next" type="button" title="Step 2"></button>
-            <button class="multisteps-form__progress-btn" type="button" title="Step 3"></button>
-            <button class="multisteps-form__progress-btn" type="button" title="Step 3"></button>
-          </div>
-        </div>
-        <!-- /.form form-vertical -->
+
       </div>
       <!-- /.form__col-bg -->
     </form>
